<resources>
    <string name="app_name">HappyHourTrail</string>
    <string name="search">Szukaj Pubów</string>
    <string name="update">Aktualizuj dane</string>
    <string name="aktualizacjaOK">Zaktualizowano !</string>
    <string name="aktualizacja_blad">Wystąpił Błąd, ponów próbę !</string>
    <string name="title_location_permission">udostępnij lokalizację</string>
    <string name="text_location_permission">Czy Chcesz udostępnić swoją lokalizację ?</string>
    <string name="ok">ok</string>
    <string name="error_required">To pole jest wymagane</string>
    <string name="error_password_invalid">one digit, one lowercase, one uppercase, 6-20</string>
    <string name="error_email_invalid">Podaj poprawny email</string>
    <string name="error_password_not_same">hasła muszą być identyczne</string>
    <string name="back">zamknij</string>
    <string name="beerName">nazwa</string>
    <string name="gatunek">gatunek</string>
    <string name="browar">browar</string>
    <string name="cena">cena</string>
    <string name="report">Zgłoś nieaktualne dane</string>
    <string name="rate">Oceń pub</string>
    <string name="report_pub">Zgłoś nieaktulną ofertę</string>
    <string name="rate_text">Oceń pub</string>
    <string name="basicReport">Tu zdefiniuj problem</string>
    <string name="report_desc">Opisz na czym polegał problem z ofertą</string>
    <string name="edit_pub_menu">Edytuj Ofertę Pubu</string>
    <string name="accept_promo">Akceptuj Promocję</string>
    <string name="add_promo">Dodaj Promocję</string>
    <string name="add_promo_title">podaj tytuł promocji</string>
</resources>
