<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4"
        android:background="@drawable/border"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="62dp"
            android:layout_height="79dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowSpan="4"


            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="472dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/beerName"
            android:textColor="@android:color/white"

            />

        <TextView
            android:id="@+id/gatunek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/gatunek"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/browar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/browar"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/cena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/cena"
            android:textColor="@android:color/white" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>