<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="5"
        android:background="@drawable/border"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="103dp"
            android:layout_height="111dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_rowSpan="4"


            app:srcCompat="@drawable/beer"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="472dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/beerName"
            android:textColor="@android:color/white"

            />

        <EditText
            android:id="@+id/gatunek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/gatunek"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/browar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/browar"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/cena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/cena"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="50dp"
            android:layout_row="4"
            android:text="akceptuj" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="25dp"
            android:layout_row="4"
            android:text="Usuń" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>