<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black">

    <com.hsalf.smilerating.SmileRating
        android:id="@+id/rate"
        android:layout_width="175dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"

        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list" />

    <Button
        android:id="@+id/report"
        android:layout_width="393dp"
        android:layout_height="33dp"

        android:layout_weight="1"
        android:text="@string/report_pub"
        android:textSize="10sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate" />

    <Button
        android:id="@+id/back2"
        android:layout_width="match_parent"
        android:layout_height="33dp"

        android:layout_weight="1"
        android:text="@string/back"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report" />

    <ListView
        android:id="@+id/promotionList"
        android:layout_width="0dp"
        android:layout_height="101dp"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="3"
        android:background="@drawable/border3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <ListView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="281dp"
        android:layout_margin="8dp"
        android:layout_marginTop="124dp"
        android:layout_weight="3"
        android:background="@drawable/border3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promotionList">

    </ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/rate_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/report"
        app:layout_constraintEnd_toStartOf="@+id/rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list" />

</android.support.constraint.ConstraintLayout>